{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 1626,
  "lineage": "9f52521f-26c5-fd01-b745-99e03c49704c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f2f02ade5f3dc0d",
            "association_id": "eipassoc-03f637ea1067903fa",
            "domain": "vpc",
            "id": "eipalloc-08f2f02ade5f3dc0d",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-01c2ccbb67b331203",
            "private_dns": "ip-10-0-1-31.eu-west-3.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-13-37-205-238.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.205.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384358200fd61d74",
            "association_id": "eipassoc-07bbcd833cedd5143",
            "domain": "vpc",
            "id": "eipalloc-0384358200fd61d74",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-03e91a604ec6e1e40",
            "private_dns": "ip-10-0-2-59.eu-west-3.compute.internal",
            "private_ip": "10.0.2.59",
            "public_dns": "ec2-13-37-246-94.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.246.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0320c06f9c4fd60e8",
            "association_id": "eipassoc-0e18ce6eadc8f2fb2",
            "domain": "vpc",
            "id": "eipalloc-0320c06f9c4fd60e8",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0cb5c8924f7d3cc11",
            "private_dns": "ip-10-0-3-172.eu-west-3.compute.internal",
            "private_ip": "10.0.3.172",
            "public_dns": "ec2-13-38-169-189.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.169.189",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:internet-gateway/igw-0be2a364d6dc4154e",
            "id": "igw-0be2a364d6dc4154e",
            "owner_id": "992122884453",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/net/nlb/bd03f30d2ca7d643",
            "arn_suffix": "net/nlb/bd03f30d2ca7d643",
            "dns_name": "nlb-bd03f30d2ca7d643.elb.eu-west-3.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/net/nlb/bd03f30d2ca7d643",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ff06b48f546cb34"
              },
              {
                "subnet_id": "subnet-0af5f0f165bbddfc6"
              },
              {
                "subnet_id": "subnet-0d84144eeec4a8472"
              }
            ],
            "subnets": [
              "subnet-02ff06b48f546cb34",
              "subnet-0af5f0f165bbddfc6",
              "subnet-0d84144eeec4a8472"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb",
            "zone_id": "Z1CMS0P5QUZ6D5"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes_general",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.nodes_general",
            "aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_iam_role_policy_attachment.amazon_eks_cni_policy_general",
            "aws_iam_role_policy_attachment.amazon_eks_worker_node_policy_general",
            "aws_launch_template.eks-nodes-launch",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main",
            "time_sleep.wait_120_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb-listener-1337",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:listener/net/nlb/bd03f30d2ca7d643/403b45d5feb5d7c5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-ssh/83586bc3ff9f9833",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:listener/net/nlb/bd03f30d2ca7d643/403b45d5feb5d7c5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/net/nlb/bd03f30d2ca7d643",
            "port": 1337,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes_general",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.nodes_general",
            "aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_iam_role_policy_attachment.amazon_eks_cni_policy_general",
            "aws_iam_role_policy_attachment.amazon_eks_worker_node_policy_general",
            "aws_launch_template.eks-nodes-launch",
            "aws_lb.nlb",
            "aws_lb_target_group.front-end-allow-1337",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main",
            "time_sleep.wait_120_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb-listener-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:listener/net/nlb/bd03f30d2ca7d643/422eb3ea5d4b9e93",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-443/411fa56b4c3b330a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:listener/net/nlb/bd03f30d2ca7d643/422eb3ea5d4b9e93",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/net/nlb/bd03f30d2ca7d643",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes_general",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.nodes_general",
            "aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_iam_role_policy_attachment.amazon_eks_cni_policy_general",
            "aws_iam_role_policy_attachment.amazon_eks_worker_node_policy_general",
            "aws_launch_template.eks-nodes-launch",
            "aws_lb.nlb",
            "aws_lb_target_group.front-end-allow-443",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main",
            "time_sleep.wait_120_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb-listener-8081",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:listener/net/nlb/bd03f30d2ca7d643/a714dc0fbbc6f8c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-8081/1d12e147fde932f4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:listener/net/nlb/bd03f30d2ca7d643/a714dc0fbbc6f8c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/net/nlb/bd03f30d2ca7d643",
            "port": 8081,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes_general",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.nodes_general",
            "aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_iam_role_policy_attachment.amazon_eks_cni_policy_general",
            "aws_iam_role_policy_attachment.amazon_eks_worker_node_policy_general",
            "aws_launch_template.eks-nodes-launch",
            "aws_lb.nlb",
            "aws_lb_target_group.front-end-allow-8081",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main",
            "time_sleep.wait_120_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front-end-allow-1337",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-ssh/83586bc3ff9f9833",
            "arn_suffix": "targetgroup/routes-ssh/83586bc3ff9f9833",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-ssh/83586bc3ff9f9833",
            "lambda_multi_value_headers_enabled": false,
            "name": "routes-ssh",
            "port": 1337,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front-end-allow-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-443/411fa56b4c3b330a",
            "arn_suffix": "targetgroup/routes-443/411fa56b4c3b330a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-443/411fa56b4c3b330a",
            "lambda_multi_value_headers_enabled": false,
            "name": "routes-443",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front-end-allow-8081",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-8081/1d12e147fde932f4",
            "arn_suffix": "targetgroup/routes-8081/1d12e147fde932f4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-8081/1d12e147fde932f4",
            "lambda_multi_value_headers_enabled": false,
            "name": "routes-8081",
            "port": 8081,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nlb-attachment-1337",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-ssh/83586bc3ff9f9833-20220307225255853400000002",
            "port": 1337,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-ssh/83586bc3ff9f9833",
            "target_id": "i-0043f817a82071d8a"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes_general",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.nodes_general",
            "aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_iam_role_policy_attachment.amazon_eks_cni_policy_general",
            "aws_iam_role_policy_attachment.amazon_eks_worker_node_policy_general",
            "aws_launch_template.eks-nodes-launch",
            "aws_lb.nlb",
            "aws_lb_target_group.front-end-allow-1337",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main",
            "time_sleep.wait_120_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nlb-attachment-443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-443/411fa56b4c3b330a-20220307225522853900000001",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-443/411fa56b4c3b330a",
            "target_id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/app/k8s-jumiafro-basicing-c21f02c4a6/248af546fe5cb819"
          },
          "dependencies": [
            "aws_lb.nlb",
            "aws_lb_target_group.front-end-allow-443"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nlb-attachment-8081",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-8081/1d12e147fde932f4-20220307225255734600000001",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:targetgroup/routes-8081/1d12e147fde932f4",
            "target_id": "arn:aws:elasticloadbalancing:eu-west-3:992122884453:loadbalancer/app/k8s-jumiafro-basicing-c21f02c4a6/248af546fe5cb819"
          },
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_eks_node_group.nodes_general",
            "aws_iam_role.eks_cluster",
            "aws_iam_role.nodes_general",
            "aws_iam_role_policy_attachment.amazon_ec2_container_registry_read_only",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_iam_role_policy_attachment.amazon_eks_cni_policy_general",
            "aws_iam_role_policy_attachment.amazon_eks_worker_node_policy_general",
            "aws_launch_template.eks-nodes-launch",
            "aws_lb.nlb",
            "aws_lb_target_group.front-end-allow-8081",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main",
            "time_sleep.wait_120_seconds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f2f02ade5f3dc0d",
            "connectivity_type": "public",
            "id": "nat-0f7fd461c8ed25df2",
            "network_interface_id": "eni-01c2ccbb67b331203",
            "private_ip": "10.0.1.31",
            "public_ip": "13.37.205.238",
            "subnet_id": "subnet-063c66a5857bf01d9",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0384358200fd61d74",
            "connectivity_type": "public",
            "id": "nat-02121509f9ccd9c23",
            "network_interface_id": "eni-03e91a604ec6e1e40",
            "private_ip": "10.0.2.59",
            "public_ip": "13.37.246.94",
            "subnet_id": "subnet-0dd13abfa7a08bea1",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0320c06f9c4fd60e8",
            "connectivity_type": "public",
            "id": "nat-0204ffdcf46a9feb2",
            "network_interface_id": "eni-0cb5c8924f7d3cc11",
            "private_ip": "10.0.3.172",
            "public_ip": "13.38.169.189",
            "subnet_id": "subnet-06cdd7d4320ee2c79",
            "tags": {
              "Name": "NAT 3"
            },
            "tags_all": {
              "Name": "NAT 3"
            }
          },
          "dependencies": [
            "aws_eip.nat3",
            "aws_internet_gateway.main",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:route-table/rtb-0f2adb6f2f9d1a4b4",
            "id": "rtb-0f2adb6f2f9d1a4b4",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f7fd461c8ed25df2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:route-table/rtb-03994c6075ad213b2",
            "id": "rtb-03994c6075ad213b2",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02121509f9ccd9c23",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:route-table/rtb-0aa4fa109069545de",
            "id": "rtb-0aa4fa109069545de",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0204ffdcf46a9feb2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private3"
            },
            "tags_all": {
              "Name": "private3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat3",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw3",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:route-table/rtb-0e13459c1518b9847",
            "id": "rtb-0e13459c1518b9847",
            "owner_id": "992122884453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be2a364d6dc4154e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c23a5af8fd65cd66",
            "route_table_id": "rtb-0f2adb6f2f9d1a4b4",
            "subnet_id": "subnet-0af5f0f165bbddfc6"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00db7c412f13a4739",
            "route_table_id": "rtb-03994c6075ad213b2",
            "subnet_id": "subnet-02ff06b48f546cb34"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444f710888595d96",
            "route_table_id": "rtb-0aa4fa109069545de",
            "subnet_id": "subnet-0d84144eeec4a8472"
          },
          "dependencies": [
            "aws_eip.nat3",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw3",
            "aws_route_table.private3",
            "aws_subnet.private_3",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e1f9599524b714f",
            "route_table_id": "rtb-0e13459c1518b9847",
            "subnet_id": "subnet-063c66a5857bf01d9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0134696a8d7340824",
            "route_table_id": "rtb-0e13459c1518b9847",
            "subnet_id": "subnet-0dd13abfa7a08bea1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b47b023fc3a8f9e",
            "route_table_id": "rtb-0e13459c1518b9847",
            "subnet_id": "subnet-06cdd7d4320ee2c79"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:security-group/sg-09f4ef1926fecc3b2",
            "description": "Allow Tcp inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all outgoing",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f4ef1926fecc3b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow port 1337 nodes to communicate with control plane (all ports)",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow port 1337 nodes to communicate with control plane (all ports)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow port 22 nodes to communicate with control plane (all ports)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-tcp-on-22-1337-5432",
            "name_prefix": "",
            "owner_id": "992122884453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security group db"
            },
            "tags_all": {
              "Name": "security group db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow port 22 nodes to communicate with control plane (all ports)",
            "from_port": 1337,
            "id": "sgrule-939503266",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0196c69c92231eab5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1337,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow port 443 nodes to communicate with control plane (all ports)",
            "from_port": 443,
            "id": "sgrule-3405435551",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0196c69c92231eab5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.eks",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "aws_subnet.private_1",
            "aws_subnet.private_2",
            "aws_subnet.private_3",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_subnet.public_3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-security-group-rule-allow-1337",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow port 1337 nodes to communicate with control plane (all ports)",
            "from_port": 1337,
            "id": "sgrule-1351870947",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f4ef1926fecc3b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1337,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-tcp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-security-group-rule-allow-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow port 22 nodes to communicate with control plane (all ports)",
            "from_port": 22,
            "id": "sgrule-1631290148",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f4ef1926fecc3b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-tcp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db-security-group-rule-allow-5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow port 1337 nodes to communicate with control plane (all ports)",
            "from_port": 5432,
            "id": "sgrule-3922834876",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f4ef1926fecc3b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-tcp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outgoing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow all outgoing",
            "from_port": 0,
            "id": "sgrule-476233324",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09f4ef1926fecc3b2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-tcp",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-0af5f0f165bbddfc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af5f0f165bbddfc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-west-3a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-02ff06b48f546cb34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ff06b48f546cb34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-west-3b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-0d84144eeec4a8472",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d84144eeec4a8472",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-3c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-west-3c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-063c66a5857bf01d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063c66a5857bf01d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eu-west-3a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eu-west-3a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-0dd13abfa7a08bea1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd13abfa7a08bea1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-west-3b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:subnet/subnet-06cdd7d4320ee2c79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cdd7d4320ee2c79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992122884453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-3c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-west-3c",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c28a3e1a398b63fb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:992122884453:vpc/vpc-0c28a3e1a398b63fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b01a134a06e2c55",
            "default_route_table_id": "rtb-00bc175acaa4174fb",
            "default_security_group_id": "sg-0a72a7579433758d4",
            "dhcp_options_id": "dopt-0384c42adb7ba12bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c28a3e1a398b63fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00bc175acaa4174fb",
            "owner_id": "992122884453",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}